<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.ListGamesActivity">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/app_name"
        android:textColor="@color/textColorPrimary"
        android:textSize="24.sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:layout_width="40.sp"
        android:layout_height="40.sp"
        android:src="@drawable/logo_celeste"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/name"/>

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="20.sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/btn_menu"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:backgroundTint="@color/textColorPrimary"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/btn_cargar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cargar juegos"
        android:backgroundTint="@color/textColorPrimary"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textPrueba"
        android:text = "Aca se va a ver los juegos de distintas forma"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/welcomeText"
        tools:ignore="HardcodedText,MissingConstraints" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/errorMessage"
        android:text = ""
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="20.sp"
        tools:ignore="HardcodedText,MissingConstraints" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewGames"
        android:layout_width="406dp"
        android:layout_height="618dp"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textPrueba"
        tools:layout_editor_absoluteX="3dp"
        tools:listitem="@layout/item_game"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>